core/libycp/testsuite/tests/types/returntype.ycp
{
  // defining block must match function declaration

  integer one () {
    return "1";			// error
  }

  return one();
}
